Frequency indicator, performance improvements
 - added frequency indicator to each key
 - added return statements to KeyDwn
 - added array apaksina, for checking which keys are in the lower section (simplifies conditions)

--- a/klaviatura.html
+++ b/klaviatura.html
@@ -19,34 +19,34 @@
                 <div class="klaviatura-container">
                     <div class="augsina">
                         <div id="k1" onmousedown="nospiedaTaustinu(1)" onmouseup="atlaidaTaustinu(1)">C</div>
-                        <div id="k2" onmousedown="nospiedaTaustinu(2)" onmouseup="atlaidaTaustinu(2)">C#</div>
+                        <div id="k2" onmousedown="nospiedaTaustinu(2)" onmouseup="atlaidaTaustinu(2)"><div>C#</div><div class="freq-indicator"></div></div>
                         <div id="k3" onmousedown="nospiedaTaustinu(3)" onmouseup="atlaidaTaustinu(3)">D</div>
-                        <div id="k4" onmousedown="nospiedaTaustinu(4)" onmouseup="atlaidaTaustinu(4)">D#</div>
+                        <div id="k4" onmousedown="nospiedaTaustinu(4)" onmouseup="atlaidaTaustinu(4)"><div>D#</div><div class="freq-indicator"></div></div>
                         <div id="k5" onmousedown="nospiedaTaustinu(5)" onmouseup="atlaidaTaustinu(5)">E</div>
                         <div id="k6" onmousedown="nospiedaTaustinu(6)" onmouseup="atlaidaTaustinu(6)">F</div>
-                        <div id="k7" onmousedown="nospiedaTaustinu(7)" onmouseup="atlaidaTaustinu(7)">F#</div>
+                        <div id="k7" onmousedown="nospiedaTaustinu(7)" onmouseup="atlaidaTaustinu(7)"><div>F#</div><div class="freq-indicator"></div></div>
                         <div id="k8" onmousedown="nospiedaTaustinu(8)" onmouseup="atlaidaTaustinu(8)">G</div>
-                        <div id="k9" onmousedown="nospiedaTaustinu(9)" onmouseup="atlaidaTaustinu(9)">G#</div>
+                        <div id="k9" onmousedown="nospiedaTaustinu(9)" onmouseup="atlaidaTaustinu(9)"><div>G#</div><div class="freq-indicator"></div></div>
                         <div id="k10" onmousedown="nospiedaTaustinu(10)" onmouseup="atlaidaTaustinu(10)">A</div>
-                        <div id="k11" onmousedown="nospiedaTaustinu(11)" onmouseup="atlaidaTaustinu(11)">A#</div>
+                        <div id="k11" onmousedown="nospiedaTaustinu(11)" onmouseup="atlaidaTaustinu(11)"><div>A#</div><div class="freq-indicator"></div></div>
                         <div id="k12" onmousedown="nospiedaTaustinu(12)" onmouseup="atlaidaTaustinu(12)">B</div>
                         <div id="k13" onmousedown="nospiedaTaustinu(13)" onmouseup="atlaidaTaustinu(13)">C</div>
-                        <div id="k14" onmousedown="nospiedaTaustinu(14)" onmouseup="atlaidaTaustinu(14)">C#</div>
+                        <div id="k14" onmousedown="nospiedaTaustinu(14)" onmouseup="atlaidaTaustinu(14)"><div>C#</div><div class="freq-indicator"></div></div>
                         <div id="k15" onmousedown="nospiedaTaustinu(15)" onmouseup="atlaidaTaustinu(15)">D</div>
-                        <div id="k16" onmousedown="nospiedaTaustinu(16)" onmouseup="atlaidaTaustinu(16)">D#</div>
+                        <div id="k16" onmousedown="nospiedaTaustinu(16)" onmouseup="atlaidaTaustinu(16)"><div>D#</div><div class="freq-indicator"></div></div>
                         <div id="k17" onmousedown="nospiedaTaustinu(17)" onmouseup="atlaidaTaustinu(17)">E</div>
                     </div>
                     <div class="apaksina">
-                        <div id="b1" onmousedown="nospiedaTaustinu(1)" onmouseup="atlaidaTaustinu(1)"></div>
-                        <div id="b3" onmousedown="nospiedaTaustinu(3)" onmouseup="atlaidaTaustinu(3)"></div>
-                        <div id="b5" onmousedown="nospiedaTaustinu(5)" onmouseup="atlaidaTaustinu(5)"></div>
-                        <div id="b6" onmousedown="nospiedaTaustinu(6)" onmouseup="atlaidaTaustinu(6)"></div>
-                        <div id="b8" onmousedown="nospiedaTaustinu(8)" onmouseup="atlaidaTaustinu(8)"></div>
-                        <div id="b10" onmousedown="nospiedaTaustinu(10)" onmouseup="atlaidaTaustinu(10)"></div>
-                        <div id="b12" onmousedown="nospiedaTaustinu(12)" onmouseup="atlaidaTaustinu(12)"></div>
-                        <div id="b13" onmousedown="nospiedaTaustinu(13)" onmouseup="atlaidaTaustinu(13)"></div>
-                        <div id="b15" onmousedown="nospiedaTaustinu(15)" onmouseup="atlaidaTaustinu(15)"></div>
-                        <div id="b17" onmousedown="nospiedaTaustinu(17)" onmouseup="atlaidaTaustinu(17)"></div>
+                        <div id="b1" onmousedown="nospiedaTaustinu(1)" onmouseup="atlaidaTaustinu(1)"><div class="freq-indicator"></div></div>
+                        <div id="b3" onmousedown="nospiedaTaustinu(3)" onmouseup="atlaidaTaustinu(3)"><div class="freq-indicator"></div></div>
+                        <div id="b5" onmousedown="nospiedaTaustinu(5)" onmouseup="atlaidaTaustinu(5)"><div class="freq-indicator"></div></div>
+                        <div id="b6" onmousedown="nospiedaTaustinu(6)" onmouseup="atlaidaTaustinu(6)"><div class="freq-indicator"></div></div>
+                        <div id="b8" onmousedown="nospiedaTaustinu(8)" onmouseup="atlaidaTaustinu(8)"><div class="freq-indicator"></div></div>
+                        <div id="b10" onmousedown="nospiedaTaustinu(10)" onmouseup="atlaidaTaustinu(10)"><div class="freq-indicator"></div></div>
+                        <div id="b12" onmousedown="nospiedaTaustinu(12)" onmouseup="atlaidaTaustinu(12)"><div class="freq-indicator"></div></div>
+                        <div id="b13" onmousedown="nospiedaTaustinu(13)" onmouseup="atlaidaTaustinu(13)"><div class="freq-indicator"></div></div>
+                        <div id="b15" onmousedown="nospiedaTaustinu(15)" onmouseup="atlaidaTaustinu(15)"><div class="freq-indicator"></div></div>
+                        <div id="b17" onmousedown="nospiedaTaustinu(17)" onmouseup="atlaidaTaustinu(17)"><div class="freq-indicator"></div></div>
                     </div>
                 </div>
                 <div class="controls-container">
