--- a/klaviatura.html
+++ b/klaviatura.html
@@ -16,43 +16,44 @@
         <h1 id="vien">//klavieres?</h3>
             <p><a href="../index.html">laid atpakaļ!</a></p>
             <div class=klaviatura-flex-container>
-                <div class="klaviatura-container">
+                <div unselectable="true" class="klaviatura-container">
                     <div class="augsina">
-                        <div id="k1" onmousedown="nospiedaTaustinu(1)" onmouseup="atlaidaTaustinu(1)">C</div>
-                        <div id="k2" onmousedown="nospiedaTaustinu(2)" onmouseup="atlaidaTaustinu(2)"><div>C#</div><div class="freq-indicator"></div></div>
-                        <div id="k3" onmousedown="nospiedaTaustinu(3)" onmouseup="atlaidaTaustinu(3)">D</div>
-                        <div id="k4" onmousedown="nospiedaTaustinu(4)" onmouseup="atlaidaTaustinu(4)"><div>D#</div><div class="freq-indicator"></div></div>
-                        <div id="k5" onmousedown="nospiedaTaustinu(5)" onmouseup="atlaidaTaustinu(5)">E</div>
-                        <div id="k6" onmousedown="nospiedaTaustinu(6)" onmouseup="atlaidaTaustinu(6)">F</div>
-                        <div id="k7" onmousedown="nospiedaTaustinu(7)" onmouseup="atlaidaTaustinu(7)"><div>F#</div><div class="freq-indicator"></div></div>
-                        <div id="k8" onmousedown="nospiedaTaustinu(8)" onmouseup="atlaidaTaustinu(8)">G</div>
-                        <div id="k9" onmousedown="nospiedaTaustinu(9)" onmouseup="atlaidaTaustinu(9)"><div>G#</div><div class="freq-indicator"></div></div>
-                        <div id="k10" onmousedown="nospiedaTaustinu(10)" onmouseup="atlaidaTaustinu(10)">A</div>
-                        <div id="k11" onmousedown="nospiedaTaustinu(11)" onmouseup="atlaidaTaustinu(11)"><div>A#</div><div class="freq-indicator"></div></div>
-                        <div id="k12" onmousedown="nospiedaTaustinu(12)" onmouseup="atlaidaTaustinu(12)">B</div>
-                        <div id="k13" onmousedown="nospiedaTaustinu(13)" onmouseup="atlaidaTaustinu(13)">C</div>
-                        <div id="k14" onmousedown="nospiedaTaustinu(14)" onmouseup="atlaidaTaustinu(14)"><div>C#</div><div class="freq-indicator"></div></div>
-                        <div id="k15" onmousedown="nospiedaTaustinu(15)" onmouseup="atlaidaTaustinu(15)">D</div>
-                        <div id="k16" onmousedown="nospiedaTaustinu(16)" onmouseup="atlaidaTaustinu(16)"><div>D#</div><div class="freq-indicator"></div></div>
-                        <div id="k17" onmousedown="nospiedaTaustinu(17)" onmouseup="atlaidaTaustinu(17)">E</div>
+                        <div id="k1" onmouseover="iebrauca(1)" onmouseout="atlaidaTaustinu(1)" onmousedown="nospiedaTaustinu(1)" onmouseup="atlaidaTaustinu(1)">C</div>
+                        <div id="k2" onmouseover="iebrauca(2)" onmouseout="atlaidaTaustinu(2)" onmousedown="nospiedaTaustinu(2)" onmouseup="atlaidaTaustinu(2)"><div>C#</div><div class="freq-indicator"></div></div>
+                        <div id="k3" onmouseover="iebrauca(3)" onmouseout="atlaidaTaustinu(3)" onmousedown="nospiedaTaustinu(3)" onmouseup="atlaidaTaustinu(3)">D</div>
+                        <div id="k4" onmouseover="iebrauca(4)" onmouseout="atlaidaTaustinu(4)" onmousedown="nospiedaTaustinu(4)" onmouseup="atlaidaTaustinu(4)"><div>D#</div><div class="freq-indicator"></div></div>
+                        <div id="k5" onmouseover="iebrauca(5)" onmouseout="atlaidaTaustinu(5)" onmousedown="nospiedaTaustinu(5)" onmouseup="atlaidaTaustinu(5)">E</div>
+                        <div id="k6" onmouseover="iebrauca(6)" onmouseout="atlaidaTaustinu(6)" onmousedown="nospiedaTaustinu(6)" onmouseup="atlaidaTaustinu(6)">F</div>
+                        <div id="k7" onmouseover="iebrauca(7)" onmouseout="atlaidaTaustinu(7)" onmousedown="nospiedaTaustinu(7)" onmouseup="atlaidaTaustinu(7)"><div>F#</div><div class="freq-indicator"></div></div>
+                        <div id="k8" onmouseover="iebrauca(8)" onmouseout="atlaidaTaustinu(8)" onmousedown="nospiedaTaustinu(8)" onmouseup="atlaidaTaustinu(8)">G</div>
+                        <div id="k9" onmouseover="iebrauca(9)" onmouseout="atlaidaTaustinu(9)" onmousedown="nospiedaTaustinu(9)" onmouseup="atlaidaTaustinu(9)"><div>G#</div><div class="freq-indicator"></div></div>
+                        <div id="k10" onmouseover="iebrauca(10)" onmouseout="atlaidaTaustinu(10)" onmousedown="nospiedaTaustinu(10)" onmouseup="atlaidaTaustinu(10)">A</div>
+                        <div id="k11" onmouseover="iebrauca(11)" onmouseout="atlaidaTaustinu(11)" onmousedown="nospiedaTaustinu(11)" onmouseup="atlaidaTaustinu(11)"><div>A#</div><div class="freq-indicator"></div></div>
+                        <div id="k12" onmouseover="iebrauca(12)" onmouseout="atlaidaTaustinu(12)" onmousedown="nospiedaTaustinu(12)" onmouseup="atlaidaTaustinu(12)">B</div>
+                        <div id="k13" onmouseover="iebrauca(13)" onmouseout="atlaidaTaustinu(13)" onmousedown="nospiedaTaustinu(13)" onmouseup="atlaidaTaustinu(13)">C</div>
+                        <div id="k14" onmouseover="iebrauca(14)" onmouseout="atlaidaTaustinu(14)" onmousedown="nospiedaTaustinu(14)" onmouseup="atlaidaTaustinu(14)"><div>C#</div><div class="freq-indicator"></div></div>
+                        <div id="k15" onmouseover="iebrauca(15)" onmouseout="atlaidaTaustinu(15)" onmousedown="nospiedaTaustinu(15)" onmouseup="atlaidaTaustinu(15)">D</div>
+                        <div id="k16" onmouseover="iebrauca(16)" onmouseout="atlaidaTaustinu(16)" onmousedown="nospiedaTaustinu(16)" onmouseup="atlaidaTaustinu(16)"><div>D#</div><div class="freq-indicator"></div></div>
+                        <div id="k17" onmouseover="iebrauca(17)" onmouseout="atlaidaTaustinu(17)" onmousedown="nospiedaTaustinu(17)" onmouseup="atlaidaTaustinu(17)">E</div>
                     </div>
                     <div class="apaksina">
-                        <div id="b1" onmousedown="nospiedaTaustinu(1)" onmouseup="atlaidaTaustinu(1)"><div class="freq-indicator"></div></div>
-                        <div id="b3" onmousedown="nospiedaTaustinu(3)" onmouseup="atlaidaTaustinu(3)"><div class="freq-indicator"></div></div>
-                        <div id="b5" onmousedown="nospiedaTaustinu(5)" onmouseup="atlaidaTaustinu(5)"><div class="freq-indicator"></div></div>
-                        <div id="b6" onmousedown="nospiedaTaustinu(6)" onmouseup="atlaidaTaustinu(6)"><div class="freq-indicator"></div></div>
-                        <div id="b8" onmousedown="nospiedaTaustinu(8)" onmouseup="atlaidaTaustinu(8)"><div class="freq-indicator"></div></div>
-                        <div id="b10" onmousedown="nospiedaTaustinu(10)" onmouseup="atlaidaTaustinu(10)"><div class="freq-indicator"></div></div>
-                        <div id="b12" onmousedown="nospiedaTaustinu(12)" onmouseup="atlaidaTaustinu(12)"><div class="freq-indicator"></div></div>
-                        <div id="b13" onmousedown="nospiedaTaustinu(13)" onmouseup="atlaidaTaustinu(13)"><div class="freq-indicator"></div></div>
-                        <div id="b15" onmousedown="nospiedaTaustinu(15)" onmouseup="atlaidaTaustinu(15)"><div class="freq-indicator"></div></div>
-                        <div id="b17" onmousedown="nospiedaTaustinu(17)" onmouseup="atlaidaTaustinu(17)"><div class="freq-indicator"></div></div>
+                        <div id="b1" onmouseover="iebrauca(1)" onmouseout="atlaidaTaustinu(1)" onmousedown="nospiedaTaustinu(1)" onmouseup="atlaidaTaustinu(1)"><div class="freq-indicator"></div></div>
+                        <div id="b3" onmouseover="iebrauca(3)" onmouseout="atlaidaTaustinu(3)" onmousedown="nospiedaTaustinu(3)" onmouseup="atlaidaTaustinu(3)"><div class="freq-indicator"></div></div>
+                        <div id="b5" onmouseover="iebrauca(5)" onmouseout="atlaidaTaustinu(5)" onmousedown="nospiedaTaustinu(5)" onmouseup="atlaidaTaustinu(5)"><div class="freq-indicator"></div></div>
+                        <div id="b6" onmouseover="iebrauca(6)" onmouseout="atlaidaTaustinu(6)" onmousedown="nospiedaTaustinu(6)" onmouseup="atlaidaTaustinu(6)"><div class="freq-indicator"></div></div>
+                        <div id="b8" onmouseover="iebrauca(8)" onmouseout="atlaidaTaustinu(8)" onmousedown="nospiedaTaustinu(8)" onmouseup="atlaidaTaustinu(8)"><div class="freq-indicator"></div></div>
+                        <div id="b10" onmouseover="iebrauca(10)" onmouseout="atlaidaTaustinu(10)" onmousedown="nospiedaTaustinu(10)" onmouseup="atlaidaTaustinu(10)"><div class="freq-indicator"></div></div>
+                        <div id="b12" onmouseover="iebrauca(12)" onmouseout="atlaidaTaustinu(12)" onmousedown="nospiedaTaustinu(12)" onmouseup="atlaidaTaustinu(12)"><div class="freq-indicator"></div></div>
+                        <div id="b13" onmouseover="iebrauca(13)" onmouseout="atlaidaTaustinu(13)" onmousedown="nospiedaTaustinu(13)" onmouseup="atlaidaTaustinu(13)"><div class="freq-indicator"></div></div>
+                        <div id="b15" onmouseover="iebrauca(15)" onmouseout="atlaidaTaustinu(15)" onmousedown="nospiedaTaustinu(15)" onmouseup="atlaidaTaustinu(15)"><div class="freq-indicator"></div></div>
+                        <div id="b17" onmouseover="iebrauca(17)" onmouseout="atlaidaTaustinu(17)" onmousedown="nospiedaTaustinu(17)" onmouseup="atlaidaTaustinu(17)"><div class="freq-indicator"></div></div>
                     </div>
                 </div>
                 <div class="controls-container">
                     <div class="control-group">
                         <input type="text" id="baseFreq" value="440" style="width:30px;">
                         <button onclick="chBaseFreq();">Set frequency!</button>
+                        Show freq? <input type="checkbox" value="false" id="vajagRadit" oninput="toggleFreq();">
                     </div>
                     <div class="control-group">
                         <button onclick="shiftOctave(0);">&lt&lt</button>
