--- a/klaviatura.html
+++ b/klaviatura.html
@@ -87,7 +87,7 @@
                         Show freq? <input type="checkbox" value="false" id="vajagRadit" oninput="toggleFreq();">
                     </div>
                     <div class="control-group">
-                        Sustain <input type="number" id="susInp" value="0.25" min="0.1" step="0.05" pattern=“[0-9]+” style="width:50px;">
+                        Sustain <input type="number" id="susInp" value="0.25" min="0.1" step="0.05" pattern=“[0-9]+” style="width:50px;" oninput="chSusTime(this.value);">
                     </div>
                 </div>
             </div>
