Added controls description
 - added a description of the controls on the page
 - auto formatted the HTML

--- a/klaviatura.html
+++ b/klaviatura.html
@@ -13,84 +13,163 @@
 
 <body>
     <div class="content-container">
-        <h1 id="vien">//klavieres?</h3>
-            <p><a href="../index.html">laid atpakaļ!</a></p>
-            <div class=klaviatura-flex-container>
-                <div unselectable="true" class="klaviatura-container">
-                    <div class="augsina">
-                        <div id="k1" onmouseover="iebrauca(1)" onmouseout="atlaidaTaustinu(1)" onmousedown="nospiedaTaustinu(1)" onmouseup="atlaidaTaustinu(1)">C</div>
-                        <div id="k2" onmouseover="iebrauca(2)" onmouseout="atlaidaTaustinu(2)" onmousedown="nospiedaTaustinu(2)" onmouseup="atlaidaTaustinu(2)"><div>C#</div><div class="freq-indicator"></div></div>
-                        <div id="k3" onmouseover="iebrauca(3)" onmouseout="atlaidaTaustinu(3)" onmousedown="nospiedaTaustinu(3)" onmouseup="atlaidaTaustinu(3)">D</div>
-                        <div id="k4" onmouseover="iebrauca(4)" onmouseout="atlaidaTaustinu(4)" onmousedown="nospiedaTaustinu(4)" onmouseup="atlaidaTaustinu(4)"><div>D#</div><div class="freq-indicator"></div></div>
-                        <div id="k5" onmouseover="iebrauca(5)" onmouseout="atlaidaTaustinu(5)" onmousedown="nospiedaTaustinu(5)" onmouseup="atlaidaTaustinu(5)">E</div>
-                        <div id="k6" onmouseover="iebrauca(6)" onmouseout="atlaidaTaustinu(6)" onmousedown="nospiedaTaustinu(6)" onmouseup="atlaidaTaustinu(6)">F</div>
-                        <div id="k7" onmouseover="iebrauca(7)" onmouseout="atlaidaTaustinu(7)" onmousedown="nospiedaTaustinu(7)" onmouseup="atlaidaTaustinu(7)"><div>F#</div><div class="freq-indicator"></div></div>
-                        <div id="k8" onmouseover="iebrauca(8)" onmouseout="atlaidaTaustinu(8)" onmousedown="nospiedaTaustinu(8)" onmouseup="atlaidaTaustinu(8)">G</div>
-                        <div id="k9" onmouseover="iebrauca(9)" onmouseout="atlaidaTaustinu(9)" onmousedown="nospiedaTaustinu(9)" onmouseup="atlaidaTaustinu(9)"><div>G#</div><div class="freq-indicator"></div></div>
-                        <div id="k10" onmouseover="iebrauca(10)" onmouseout="atlaidaTaustinu(10)" onmousedown="nospiedaTaustinu(10)" onmouseup="atlaidaTaustinu(10)">A</div>
-                        <div id="k11" onmouseover="iebrauca(11)" onmouseout="atlaidaTaustinu(11)" onmousedown="nospiedaTaustinu(11)" onmouseup="atlaidaTaustinu(11)"><div>A#</div><div class="freq-indicator"></div></div>
-                        <div id="k12" onmouseover="iebrauca(12)" onmouseout="atlaidaTaustinu(12)" onmousedown="nospiedaTaustinu(12)" onmouseup="atlaidaTaustinu(12)">B</div>
-                        <div id="k13" onmouseover="iebrauca(13)" onmouseout="atlaidaTaustinu(13)" onmousedown="nospiedaTaustinu(13)" onmouseup="atlaidaTaustinu(13)">C</div>
-                        <div id="k14" onmouseover="iebrauca(14)" onmouseout="atlaidaTaustinu(14)" onmousedown="nospiedaTaustinu(14)" onmouseup="atlaidaTaustinu(14)"><div>C#</div><div class="freq-indicator"></div></div>
-                        <div id="k15" onmouseover="iebrauca(15)" onmouseout="atlaidaTaustinu(15)" onmousedown="nospiedaTaustinu(15)" onmouseup="atlaidaTaustinu(15)">D</div>
-                        <div id="k16" onmouseover="iebrauca(16)" onmouseout="atlaidaTaustinu(16)" onmousedown="nospiedaTaustinu(16)" onmouseup="atlaidaTaustinu(16)"><div>D#</div><div class="freq-indicator"></div></div>
-                        <div id="k17" onmouseover="iebrauca(17)" onmouseout="atlaidaTaustinu(17)" onmousedown="nospiedaTaustinu(17)" onmouseup="atlaidaTaustinu(17)">E</div>
+        <h1 id="vien">//klavieres?</h1>
+        <p><a href="../index.html">laid atpakaļ!</a></p>
+        <div class=klaviatura-flex-container>
+            <div unselectable="true" class="klaviatura-container">
+                <div class="augsina">
+                    <div id="k1" onmouseover="iebrauca(1)" onmouseout="atlaidaTaustinu(1)" onmousedown="nospiedaTaustinu(1)" onmouseup="atlaidaTaustinu(1)">C</div>
+                    <div id="k2" onmouseover="iebrauca(2)" onmouseout="atlaidaTaustinu(2)" onmousedown="nospiedaTaustinu(2)" onmouseup="atlaidaTaustinu(2)">
+                        <div>C#</div>
+                        <div class="freq-indicator"></div>
                     </div>
-                    <div class="apaksina">
-                        <div id="b1" onmouseover="iebrauca(1)" onmouseout="atlaidaTaustinu(1)" onmousedown="nospiedaTaustinu(1)" onmouseup="atlaidaTaustinu(1)"><div class="freq-indicator"></div></div>
-                        <div id="b3" onmouseover="iebrauca(3)" onmouseout="atlaidaTaustinu(3)" onmousedown="nospiedaTaustinu(3)" onmouseup="atlaidaTaustinu(3)"><div class="freq-indicator"></div></div>
-                        <div id="b5" onmouseover="iebrauca(5)" onmouseout="atlaidaTaustinu(5)" onmousedown="nospiedaTaustinu(5)" onmouseup="atlaidaTaustinu(5)"><div class="freq-indicator"></div></div>
-                        <div id="b6" onmouseover="iebrauca(6)" onmouseout="atlaidaTaustinu(6)" onmousedown="nospiedaTaustinu(6)" onmouseup="atlaidaTaustinu(6)"><div class="freq-indicator"></div></div>
-                        <div id="b8" onmouseover="iebrauca(8)" onmouseout="atlaidaTaustinu(8)" onmousedown="nospiedaTaustinu(8)" onmouseup="atlaidaTaustinu(8)"><div class="freq-indicator"></div></div>
-                        <div id="b10" onmouseover="iebrauca(10)" onmouseout="atlaidaTaustinu(10)" onmousedown="nospiedaTaustinu(10)" onmouseup="atlaidaTaustinu(10)"><div class="freq-indicator"></div></div>
-                        <div id="b12" onmouseover="iebrauca(12)" onmouseout="atlaidaTaustinu(12)" onmousedown="nospiedaTaustinu(12)" onmouseup="atlaidaTaustinu(12)"><div class="freq-indicator"></div></div>
-                        <div id="b13" onmouseover="iebrauca(13)" onmouseout="atlaidaTaustinu(13)" onmousedown="nospiedaTaustinu(13)" onmouseup="atlaidaTaustinu(13)"><div class="freq-indicator"></div></div>
-                        <div id="b15" onmouseover="iebrauca(15)" onmouseout="atlaidaTaustinu(15)" onmousedown="nospiedaTaustinu(15)" onmouseup="atlaidaTaustinu(15)"><div class="freq-indicator"></div></div>
-                        <div id="b17" onmouseover="iebrauca(17)" onmouseout="atlaidaTaustinu(17)" onmousedown="nospiedaTaustinu(17)" onmouseup="atlaidaTaustinu(17)"><div class="freq-indicator"></div></div>
+                    <div id="k3" onmouseover="iebrauca(3)" onmouseout="atlaidaTaustinu(3)" onmousedown="nospiedaTaustinu(3)" onmouseup="atlaidaTaustinu(3)">D</div>
+                    <div id="k4" onmouseover="iebrauca(4)" onmouseout="atlaidaTaustinu(4)" onmousedown="nospiedaTaustinu(4)" onmouseup="atlaidaTaustinu(4)">
+                        <div>D#</div>
+                        <div class="freq-indicator"></div>
+                    </div>
+                    <div id="k5" onmouseover="iebrauca(5)" onmouseout="atlaidaTaustinu(5)" onmousedown="nospiedaTaustinu(5)" onmouseup="atlaidaTaustinu(5)">E</div>
+                    <div id="k6" onmouseover="iebrauca(6)" onmouseout="atlaidaTaustinu(6)" onmousedown="nospiedaTaustinu(6)" onmouseup="atlaidaTaustinu(6)">F</div>
+                    <div id="k7" onmouseover="iebrauca(7)" onmouseout="atlaidaTaustinu(7)" onmousedown="nospiedaTaustinu(7)" onmouseup="atlaidaTaustinu(7)">
+                        <div>F#</div>
+                        <div class="freq-indicator"></div>
+                    </div>
+                    <div id="k8" onmouseover="iebrauca(8)" onmouseout="atlaidaTaustinu(8)" onmousedown="nospiedaTaustinu(8)" onmouseup="atlaidaTaustinu(8)">G</div>
+                    <div id="k9" onmouseover="iebrauca(9)" onmouseout="atlaidaTaustinu(9)" onmousedown="nospiedaTaustinu(9)" onmouseup="atlaidaTaustinu(9)">
+                        <div>G#</div>
+                        <div class="freq-indicator"></div>
+                    </div>
+                    <div id="k10" onmouseover="iebrauca(10)" onmouseout="atlaidaTaustinu(10)" onmousedown="nospiedaTaustinu(10)" onmouseup="atlaidaTaustinu(10)">A</div>
+                    <div id="k11" onmouseover="iebrauca(11)" onmouseout="atlaidaTaustinu(11)" onmousedown="nospiedaTaustinu(11)" onmouseup="atlaidaTaustinu(11)">
+                        <div>A#</div>
+                        <div class="freq-indicator"></div>
+                    </div>
+                    <div id="k12" onmouseover="iebrauca(12)" onmouseout="atlaidaTaustinu(12)" onmousedown="nospiedaTaustinu(12)" onmouseup="atlaidaTaustinu(12)">B</div>
+                    <div id="k13" onmouseover="iebrauca(13)" onmouseout="atlaidaTaustinu(13)" onmousedown="nospiedaTaustinu(13)" onmouseup="atlaidaTaustinu(13)">C</div>
+                    <div id="k14" onmouseover="iebrauca(14)" onmouseout="atlaidaTaustinu(14)" onmousedown="nospiedaTaustinu(14)" onmouseup="atlaidaTaustinu(14)">
+                        <div>C#</div>
+                        <div class="freq-indicator"></div>
+                    </div>
+                    <div id="k15" onmouseover="iebrauca(15)" onmouseout="atlaidaTaustinu(15)" onmousedown="nospiedaTaustinu(15)" onmouseup="atlaidaTaustinu(15)">D</div>
+                    <div id="k16" onmouseover="iebrauca(16)" onmouseout="atlaidaTaustinu(16)" onmousedown="nospiedaTaustinu(16)" onmouseup="atlaidaTaustinu(16)">
+                        <div>D#</div>
+                        <div class="freq-indicator"></div>
+                    </div>
+                    <div id="k17" onmouseover="iebrauca(17)" onmouseout="atlaidaTaustinu(17)" onmousedown="nospiedaTaustinu(17)" onmouseup="atlaidaTaustinu(17)">E</div>
+                </div>
+                <div class="apaksina">
+                    <div id="b1" onmouseover="iebrauca(1)" onmouseout="atlaidaTaustinu(1)" onmousedown="nospiedaTaustinu(1)" onmouseup="atlaidaTaustinu(1)">
+                        <div class="freq-indicator"></div>
+                    </div>
+                    <div id="b3" onmouseover="iebrauca(3)" onmouseout="atlaidaTaustinu(3)" onmousedown="nospiedaTaustinu(3)" onmouseup="atlaidaTaustinu(3)">
+                        <div class="freq-indicator"></div>
+                    </div>
+                    <div id="b5" onmouseover="iebrauca(5)" onmouseout="atlaidaTaustinu(5)" onmousedown="nospiedaTaustinu(5)" onmouseup="atlaidaTaustinu(5)">
+                        <div class="freq-indicator"></div>
+                    </div>
+                    <div id="b6" onmouseover="iebrauca(6)" onmouseout="atlaidaTaustinu(6)" onmousedown="nospiedaTaustinu(6)" onmouseup="atlaidaTaustinu(6)">
+                        <div class="freq-indicator"></div>
+                    </div>
+                    <div id="b8" onmouseover="iebrauca(8)" onmouseout="atlaidaTaustinu(8)" onmousedown="nospiedaTaustinu(8)" onmouseup="atlaidaTaustinu(8)">
+                        <div class="freq-indicator"></div>
+                    </div>
+                    <div id="b10" onmouseover="iebrauca(10)" onmouseout="atlaidaTaustinu(10)" onmousedown="nospiedaTaustinu(10)" onmouseup="atlaidaTaustinu(10)">
+                        <div class="freq-indicator"></div>
+                    </div>
+                    <div id="b12" onmouseover="iebrauca(12)" onmouseout="atlaidaTaustinu(12)" onmousedown="nospiedaTaustinu(12)" onmouseup="atlaidaTaustinu(12)">
+                        <div class="freq-indicator"></div>
+                    </div>
+                    <div id="b13" onmouseover="iebrauca(13)" onmouseout="atlaidaTaustinu(13)" onmousedown="nospiedaTaustinu(13)" onmouseup="atlaidaTaustinu(13)">
+                        <div class="freq-indicator"></div>
+                    </div>
+                    <div id="b15" onmouseover="iebrauca(15)" onmouseout="atlaidaTaustinu(15)" onmousedown="nospiedaTaustinu(15)" onmouseup="atlaidaTaustinu(15)">
+                        <div class="freq-indicator"></div>
+                    </div>
+                    <div id="b17" onmouseover="iebrauca(17)" onmouseout="atlaidaTaustinu(17)" onmousedown="nospiedaTaustinu(17)" onmouseup="atlaidaTaustinu(17)">
+                        <div class="freq-indicator"></div>
                     </div>
                 </div>
-                <div class="controls-container">
-                    <div class="control-group">
-                        <input type="text" id="baseFreq" value="440" style="width:30px;">
-                        <button onclick="chBaseFreq();">Set frequency!</button>
-                    </div>
-                    <div class="control-group">
-                        <button onclick="shiftOctave(0);">&lt&lt</button>
-                        <button onclick="shiftOctave(1);">Reset octave!</button>
-                        <button onclick="shiftOctave(2);">&gt&gt</button>
-                    </div>
-                    <div class="control-group">
-                        Wave:
-                        <select id="pickWave" oninput="changeWave(this.value)">
-                            <option value="sine">Sine</option>
-                            <option value="triangle">Triangle</option>
-                            <option value="sawtooth">Sawtooth</option>
-                            <option value="square">Square</option>
-                        </select>
-                    </div>
-                    <div class="control-group">
-                        Temperament:
-                        <input type="text" id="tetCh" value="12" style="width:30px;">
-                        <button onclick="changeTemperament(document.getElementById(`tetCh`).value);">Set!</button>
-                    </div>
-                    <div class="control-group">
-                        Volume:
-                        <input type="range" id="volSlider" min="0" max="1" step="0.01" value="0.2" oninput="chVol(this.value)">
-                    </div>
-                    <!--div class="control-group">
+            </div>
+            <div class="controls-container">
+                <div class="control-group">
+                    <input type="text" id="baseFreq" value="440" style="width:30px;">
+                    <button onclick="chBaseFreq();">Set frequency!</button>
+                </div>
+                <div class="control-group">
+                    <button onclick="shiftOctave(0);">&lt&lt</button>
+                    <button onclick="shiftOctave(1);">Reset octave!</button>
+                    <button onclick="shiftOctave(2);">&gt&gt</button>
+                </div>
+                <div class="control-group">
+                    Wave:
+                    <select id="pickWave" oninput="changeWave(this.value)">
+                        <option value="sine">Sine</option>
+                        <option value="triangle">Triangle</option>
+                        <option value="sawtooth">Sawtooth</option>
+                        <option value="square">Square</option>
+                    </select>
+                </div>
+                <div class="control-group">
+                    Temperament:
+                    <input type="text" id="tetCh" value="12" style="width:30px;">
+                    <button onclick="changeTemperament(document.getElementById(`tetCh`).value);">Set!</button>
+                </div>
+                <div class="control-group">
+                    Volume:
+                    <input type="range" id="volSlider" min="0" max="1" step="0.01" value="0.2" oninput="chVol(this.value)">
+                </div>
+                <!--div class="control-group">
                         Arrpegiator interval:
                         <input type="text" id="arpIntervalInput" min="0" max="10000" value="500"
                         onfocus="arp.intervalInp = true;">
                         <button onclick="arp.stop()">Clear!</button>
                     </div-->
-                    <div class="control-group">
-                        Show freq? <input type="checkbox" value="false" id="vajagRadit" oninput="toggleFreq();">
-                    </div>
-                    <div class="control-group">
-                        Sustain <input type="number" id="susInp" value="0.25" min="0.1" step="0.05" pattern=“[0-9]+” style="width:50px;" oninput="chSusTime(this.value);">
-                    </div>
+                <div class="control-group">
+                    Show freq? <input type="checkbox" value="false" id="vajagRadit" oninput="toggleFreq();">
+                </div>
+                <div class="control-group">
+                    Sustain <input type="number" id="susInp" value="0.25" min="0.1" step="0.05" pattern=“[0-9]+” style="width:50px;" oninput="chSusTime(this.value);">
                 </div>
             </div>
+        </div>
+        <h2>Controls description</h2>
+        <ul>
+            <li>
+                Frequency - set the base A frequency
+            </li>
+            <li>
+                Octave
+                <ul>
+                    <li>
+                        Press the left or right arrows to move the keyboard octave
+                    </li>
+                    <li>
+                        Press &quot;Reset octave!&quot; to change the octave back to default
+                    </li>
+                </ul>
+            </li>
+            <li>
+                Wave - choose the wave type
+            </li>
+            <li>
+                Temperament - choose the amount of notes in an octave and press &quot;Set!&quot;
+            </li>
+            <li>
+                Volume - move the slider to change volume
+            </li>
+            <li>
+                Show freq? - display the individual frequencies of the notes on the keys
+            </li>
+            <li>
+                Sustain - time in seconds, how long a key is sustained after release
+            </li>
+            <li>
+                Hold shift to sustain notes
+            </li>
+            <li>
+                Enable caps lock for arpeggiator - plays an arpeggio with the sustained notes
+            </li>
+        </ul>
     </div>
     <footer>
         &#169; Edgars Krūmiņš
