--- a/klaviatura.html
+++ b/klaviatura.html
@@ -2,8 +2,12 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="reset.css">
+    <!-- Bootstrap framework CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="tasiraklav.css">
+
     <meta charset="UTF-8">
     <title>klavieres?</title>
     <script src="p5/p5.js"></script>
@@ -12,7 +16,7 @@
 </head>
 
 <body>
-    <div class="content-container">
+    <div class="container-sm">
         <h1 id="vien">//klavieres?</h1>
         <p><a href="../index.html">laid atpakaļ!</a></p>
         <div class=klaviatura-flex-container>
@@ -92,7 +96,7 @@
             </div>
             <div class="controls-container">
                 <div class="control-group">
-                    <input type="text" id="baseFreq" value="440" style="width:30px;">
+                    <input type="text" id="baseFreq" value="440" style="width: 50px;">
                     <button onclick="chBaseFreq();">Set frequency!</button>
                 </div>
                 <div class="control-group">
@@ -111,7 +115,7 @@
                 </div>
                 <div class="control-group">
                     Temperament:
-                    <input type="text" id="tetCh" value="12" style="width:30px;">
+                    <input type="text" id="tetCh" value="12" style="width: 30px;">
                     <button onclick="changeTemperament(document.getElementById(`tetCh`).value);">Set!</button>
                 </div>
                 <div class="control-group">
@@ -132,48 +136,78 @@
                 </div>
             </div>
         </div>
-        <h2>Controls description</h2>
-        <ul>
-            <li>
-                Frequency - set the base A frequency
+        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+            <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="pills-info-tab" data-bs-toggle="pill" data-bs-target="#pills-info" type="button" role="tab">Information</button>
             </li>
-            <li>
-                Octave
-                <ul>
-                    <li>
-                        Press the left or right arrows to move the keyboard octave
-                    </li>
-                    <li>
-                        Press &quot;Reset octave!&quot; to change the octave back to default
-                    </li>
-                </ul>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="pills-sustain-tab" data-bs-toggle="pill" data-bs-target="#pills-sustain" type="button" role="tab">Sustain</button>
             </li>
-            <li>
-                Wave - choose the wave type
-            </li>
-            <li>
-                Temperament - choose the amount of notes in an octave and press &quot;Set!&quot;
-            </li>
-            <li>
-                Volume - move the slider to change volume
-            </li>
-            <li>
-                Show freq? - display the individual frequencies of the notes on the keys
-            </li>
-            <li>
-                Sustain - time in seconds, how long a key is sustained after release
-            </li>
-            <li>
-                Hold shift to sustain notes
-            </li>
-            <li>
-                Enable caps lock for arpeggiator - plays an arpeggio with the sustained notes
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="pills-arpeggiator-tab" data-bs-toggle="pill" data-bs-target="#pills-arpeggiator" type="button" role="tab">Arpeggiator</button>
             </li>
         </ul>
+        <div class="tab-content" id="pills-tabContent">
+            <div class="tab-pane fade show active" id="pills-info" role="tabpanel">
+                <h2>Controls description</h2>
+                <ul>
+                    <li>
+                        Frequency - set the base A frequency
+                    </li>
+                    <li>
+                        Octave
+                        <ul>
+                            <li>
+                                Press the left or right arrows to move the keyboard octave
+                            </li>
+                            <li>
+                                Press &quot;Reset octave!&quot; to change the octave back to default
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        Wave - choose the wave type
+                    </li>
+                    <li>
+                        Temperament - choose the amount of notes in an octave and press &quot;Set!&quot;
+                    </li>
+                    <li>
+                        Volume - move the slider to change volume
+                    </li>
+                    <li>
+                        Show freq? - display the individual frequencies of the notes on the keys
+                    </li>
+                    <li>
+                        Sustain - time in seconds, how long a key is sustained after release
+                    </li>
+                    <li>
+                        Hold shift to sustain notes
+                    </li>
+                    <li>
+                        Enable caps lock for arpeggiator - plays an arpeggio with the sustained notes
+                    </li>
+                </ul>
+            </div>
+            <div class="tab-pane fade" id="pills-sustain" role="tabpanel">
+                <h2>Sustain</h2>
+                <p>
+                    Text and controls of the sustain effect
+                </p>
+            </div>
+            <div class="tab-pane fade" id="pills-arpeggiator" role="tabpanel">
+                <h2>Arpeggiator</h2>
+                <p>
+                    Text and controls of the arpeggiator
+                </p>
+            </div>
+        </div>
     </div>
     <footer>
         &#169; Edgars Krūmiņš
     </footer>
+
+    <!-- Bootstrap framwork JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 
 </html>
