Added link to GitHub repo in footer

--- a/klaviatura.html
+++ b/klaviatura.html
@@ -204,6 +204,9 @@
     </div>
     <footer>
         &#169; Edgars Krūmiņš
+        <a href="https://github.com/KrumsJr/WebPiano" target="_blank">
+            <img src="./GitHub-Mark-32px.png" alt="GitHub">
+        </a>
     </footer>
 
     <!-- Bootstrap framwork JS -->
