Typo, removed unnecessary custom CSS

--- a/klaviatura.html
+++ b/klaviatura.html
@@ -17,9 +17,9 @@
 
 <body>
     <div class="container-sm">
-        <h1 id="vien">//klavieres?</h1>
+        <h1 class="mt-3" id="vien">//klavieres?</h1>
         <p><a href="../index.html">laid atpakaļ!</a></p>
-        <div class=klaviatura-flex-container>
+        <div class="klaviatura-flex-container">
             <div unselectable="true" class="klaviatura-container">
                 <div class="augsina">
                     <div id="k1" onmouseover="iebrauca(1)" onmouseout="atlaidaTaustinu(1)" onmousedown="nospiedaTaustinu(1)" onmouseup="atlaidaTaustinu(1)">C</div>
